--- a/mwe-2/2025-03-04-07-30/Makefile
+++ b/mwe-2/2025-03-04-07-30/Makefile
@@ -11,7 +11,17 @@ sample.FULL: sample.tex
 	cd $*.UNPACKED && unzip -U -qq ../$*.epub
 	$(EPUBCHECK) $*.epub
 
-.SUFFIXES: .text .epub .pdf .FULL .VIEW .UNPACKED .CHECK .EPUB+CHECK
+sample.IND-FILE-BROKEN: sample.tex
+	$(MAKE) clean
+	lualatex $*
+	makeindex $*
+	lualatex $*
+	tex4ebook -c config.cfg -e build.lua $< || /bin/true
+	rm -rf $*.UNPACKED && mkdir -p $*.UNPACKED
+	cd $*.UNPACKED && unzip -U -qq ../$*.epub
+	lualatex $*
+
+.SUFFIXES: .text .epub .pdf .FULL .VIEW .UNPACKED .CHECK .EPUB+CHECK .IND-FILE-BROKEN
 
 clean:
 	rm -f *~ *.ind *.ilg *.pdx *.aux */*.aux */*/*.aux *.out *.toc *.idx *.pdf *.log *.epub *.png *.lot *.lof
